--- a/src/pages/Layout/Layout.sass
+++ b/src/pages/Layout/Layout.sass
@@ -1,9 +1,4 @@
 .layout
-  position: fixed
-  top: 0px
-  left: 0px
-  bottom: 0px
-  right: 0px
   height: 100%
   display: flex
   flex-direction: column
@@ -13,8 +8,8 @@
 
 .page
   flex-grow: 1
-  padding: 0 100px
+  padding: 50px 100px
   @media (max-width: 768px)
-    padding: 0 30px
+    padding: 35px 30px
   @media (max-width: 576px)
-    padding: 0 20px
+    padding: 27px 20px
