style: added banner and card styles to index

--- a/src/index.sass
+++ b/src/index.sass
@@ -10,3 +10,5 @@ $secondary-color: white
 @import "./pages/Layout/Layout.sass"
 @import "./components/Navbar/Navbar.sass"
 @import "./components/Footer/Footer.sass"
+@import "./components/Banner/Banner.sass"
+@import "./components/Card/Card.sass"
