feat: added image placeholder if source is undefined

--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -34,6 +34,11 @@
     width: 100%
     border-radius: 10px
     object-fit: cover
+  &__image-placeholder
+    height: 100%
+    width: 100%
+    border-radius: 10px
+    background-color: $primary-color
   &__title-container
     display: flex
     align-items: flex-end
