feat: added link and title in logo

--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -6,6 +6,8 @@
     padding: 0 30px
   @media (max-width: 576px)
     padding: 0 20px
+  &__title
+    margin: 0
   &__logo
     width: 210px
     @media (max-width: 576px)
