feat: added conditional styles for layout pages

--- a/src/pages/Layout/Layout.sass
+++ b/src/pages/Layout/Layout.sass
@@ -13,3 +13,15 @@
     padding: 35px 30px
   @media (max-width: 576px)
     padding: 27px 20px
+  &--about
+    padding: 38px 100px
+    @media (max-width: 768px)
+      padding: 30px 30px
+    @media (max-width: 576px)
+      padding: 19px 20px
+  &--error
+    padding: 139px 100px
+    @media (max-width: 768px)
+      padding: 120px 30px
+    @media (max-width: 576px)
+      padding: 113px 20px
