style: added new componenent in style index

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap')
 
 body
   margin: 0
@@ -8,7 +8,10 @@ $primary-color: #FF6060
 $secondary-color: white
 
 @import "./pages/Layout/Layout.sass"
+@import "./pages/Home/Home.sass"
+@import "./pages/About/About.sass"
 @import "./components/Navbar/Navbar.sass"
 @import "./components/Footer/Footer.sass"
 @import "./components/Banner/Banner.sass"
 @import "./components/Card/Card.sass"
+@import "./components/Collapse/Collapse.sass"
