fix: footer not always at bottom of the page

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -4,6 +4,7 @@
   align-items: center
   justify-content: center
   height: 209px
+  margin-top: auto
   background-color: black
   &__logo
     width: 122px
