--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -2,9 +2,11 @@
   display: flex
   justify-content: space-between
   padding: 0 100px
+  margin-top: 45px
   @media (max-width: 768px)
     padding: 0 30px
   @media (max-width: 576px)
+    margin-top: 20px
     padding: 0 20px
   &__title
     margin: 0
