--- a/src/pages/Layout/Layout.sass
+++ b/src/pages/Layout/Layout.sass
@@ -1,13 +1,9 @@
 .layout
-  height: 100%
   display: flex
   flex-direction: column
-  padding-top: 45px
-  @media (max-width: 576px)
-    padding-top: 20px
+  min-height: 100vh
 
 .page
-  flex-grow: 1
   padding: 50px 100px
   @media (max-width: 768px)
     padding: 35px 30px
