--- a/src/index.sass
+++ b/src/index.sass
@@ -10,6 +10,7 @@ $secondary-color: white
 @import "./pages/Layout/Layout.sass"
 @import "./pages/Home/Home.sass"
 @import "./pages/About/About.sass"
+@import "./pages/Error/Error.sass"
 @import "./components/Navbar/Navbar.sass"
 @import "./components/Footer/Footer.sass"
 @import "./components/Banner/Banner.sass"
