refactor: card component

--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -12,12 +12,12 @@
     height: 100%
     border-radius: 10px
     background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent)
-  &__image
+  &__cover
     height: 100%
     width: 100%
     border-radius: 10px
     object-fit: cover
-  &__image-placeholder
+  &__cover-placeholder
     height: 100%
     width: 100%
     border-radius: 10px
