--- a/src/pages/Layout/Layout.sass
+++ b/src/pages/Layout/Layout.sass
@@ -2,6 +2,11 @@
   display: flex
   flex-direction: column
   min-height: 100vh
+  margin: 0
+  &__container
+    @media (min-width: 1440px)
+      width: 1440px
+      margin: 0 auto
 
 .page
   padding: 50px 100px
