feat: added slideshow component

--- a/src/index.sass
+++ b/src/index.sass
@@ -16,3 +16,4 @@ $secondary-color: white
 @import "./components/Banner/Banner.sass"
 @import "./components/Card/Card.sass"
 @import "./components/Collapse/Collapse.sass"
+@import "./components/Slideshow/Slideshow.sass"
