fix: about page margins for small devices

--- a/src/pages/About/About.sass
+++ b/src/pages/About/About.sass
@@ -1,4 +1,4 @@
 .collapses
-  margin-top: 38px
-  @media (max-width: 576px)
-    margin-top: 19px
+  margin: 38px 120px 0 120px
+  @media (max-width: 992px)
+    margin: 19px 0 0 0
