feat: added new size prop for collapse component

--- a/src/pages/About/About.sass
+++ b/src/pages/About/About.sass
@@ -1,4 +1,6 @@
 .collapses
   margin: 38px 120px 0 120px
   @media (max-width: 992px)
-    margin: 19px 0 0 0
+    margin: 38px 0 0 0
+  @media (max-width: 576px)
+    margin: 20px 0 0 0
