feat: added heading, profile, rating, description and equipement sections in rantals page

--- a/src/index.sass
+++ b/src/index.sass
@@ -9,6 +9,7 @@ $secondary-color: white
 
 @import "./pages/Layout/Layout.sass"
 @import "./pages/Home/Home.sass"
+@import "./pages/Rentals/Rentals.sass"
 @import "./pages/About/About.sass"
 @import "./pages/Error/Error.sass"
 @import "./components/Navbar/Navbar.sass"
@@ -17,3 +18,5 @@ $secondary-color: white
 @import "./components/Card/Card.sass"
 @import "./components/Collapse/Collapse.sass"
 @import "./components/Slideshow/Slideshow.sass"
+@import "./components/Profile/Profile.sass"
+@import "./components/Rating/Rating.sass"
