--- a/src/components/Banner/Banner.sass
+++ b/src/components/Banner/Banner.sass
@@ -36,6 +36,8 @@
     font-size: 48px
     color: $secondary-color
     margin: 0 32px
+    @media (max-width: 768px)
+      font-size: 36px
     @media (max-width: 576px)
       margin: 0 16px
       font-size: 24px
