--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -24,8 +24,17 @@
     text-decoration: none
     font-size: 24px
     color: $primary-color
+    &::after
+      content: ""
+      display: block
+      border: 1px solid $primary-color
+      transform: scale(0)
+      transition: all 200ms ease
+    &:hover::after
+      transform: scale(1)
     @media (max-width: 576px)
       font-size: 12px
       text-transform: uppercase
     &--active
-      text-decoration: underline
+      &::after
+        transform: scale(1)
