--- a/src/components/Slideshow/Slideshow.sass
+++ b/src/components/Slideshow/Slideshow.sass
@@ -1,14 +1,22 @@
 .slideshow
   position: relative
+  width: 100%
+  height: 415px
+  @media (max-width: 768px)
+    height: 330px
+  @media (max-width: 576px)
+    height: 255px
   &__image
+    position: absolute
     width: 100%
-    height: 415px
+    height: 100%
     object-fit: cover
     border-radius: 25px
-    @media (max-width: 768px)
-      height: 330px
-    @media (max-width: 576px)
-      height: 255px
+    opacity: 0
+    transition: opacity 500ms ease-in
+    &--active
+      z-index: 1
+      opacity: 1
   &__navigation
     display: flex
     justify-content: center
@@ -17,6 +25,7 @@
     top: 0
     height: 100%
     width: 100%
+    z-index: 2
   &__button
     height: 100%
     padding: 0 20px
