--- a/src/pages/Layout/Layout.sass
+++ b/src/pages/Layout/Layout.sass
@@ -21,8 +21,14 @@
     @media (max-width: 576px)
       padding: 19px 20px
   &--error
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 100px
     padding: 100px 115px
     @media (max-width: 768px)
+      gap: 80px
       padding: 90px 60px
     @media (max-width: 576px)
+      gap: 60px
       padding: 80px 40px
