refactor: banner component

--- a/src/components/Banner/Banner.sass
+++ b/src/components/Banner/Banner.sass
@@ -3,7 +3,7 @@
   height: 223px
   @media (max-width: 576px)
     height: 111px
-  &--about-page
+  &--no-text
     @media (max-width: 576px)
       height: 223px
   &::before
